--- a/PanArctic_DSL_figures.Rmd
+++ b/PanArctic_DSL_figures.Rmd
@@ -28,6 +28,8 @@ library(RColorBrewer)           # Diverging color palette
 library(ggnewscale)             # Multiple color scales on a single plot
 library(lemon)                  # Repeated axis on facets
 library(DT)                     # Interactive tables
+library(ragg)                   # Fix issues with plotting alpha and coord_cartesian
+library(MetBrewer)              # Color palette
 source("R/getNOAA.ice.bathy.R") # Load bathy data from NOAA
 source("R/rounder.R")
 # Custom figure theme
@@ -477,74 +479,32 @@ p_Sv_grid_laea
 
 ### Lines
 
-```{r, fig.width=7.5, fig.height=4}
-# wesanderson::wes_palette("Darjeeling1", type = "discrete") 1st and 5th colours are inverted
-# col_pal <- c("#5BBCD6", "#00A08A", "#F2AD00", "#F98400", "#FF0000")
-# col_pal <- c("#5BBCD6", "#F2AD00", "#FF0000", "black")
-col_pal <- c("#1170aa", "#fc7d0b", "#76B7B2", "black") # Custom colour palette
-
+```{r, fig.width=6.5, fig.height=3.5}
+# Find cells with no DSL
 empty_DSL <- SA_grid_laea %>% 
   group_by(xc, yc, year, empty_clean) %>%
   summarise()
-
-# Calculate median Sv profile for each grid cell
-Sv_prof <- Sv_grid_laea %>% 
-  left_join(., empty_DSL, by = c("year", "xc", "yc")) %>% # Add DSL presence
-  filter(empty_clean == F) %>%
-  mutate(IHO_area = factor(case_when(IHO_area == "East Arctic Ocean" ~ "East Arctic\nOcean",
-                                     IHO_area == "West Arctic Ocean" ~ "West Arctic\nOcean",
-                                     IHO_area == "Beaufort Sea" ~ "Beaufort Sea",
-                                     IHO_area == "The Northwestern Passages" ~ "Can. Arctic\nArchipelago",
-                                     IHO_area == "Baffin Bay" ~ "Baffin Bay",
-                                     IHO_area == "Davis Strait" ~ "Davis Strait"),
-                           levels = c("West Arctic\nOcean", "Beaufort Sea", "Can. Arctic\nArchipelago",
-                                      "Baffin Bay", "Davis Strait", "East Arctic\nOcean"))) %>%
-  mutate(depth_round = rounder(depth, -10)) %>% # round down to nearest 10
-  group_by(depth_round, IHO_area, xc, yc, year) %>%
-  summarise(sv_lin50 = median(sv_lin_median)) %>% 
-  ungroup() %>%
-  mutate(Sv_median = 10 * log10(sv_lin50),
-         year = as.factor(year)) %>%
-  unite(ID, xc, yc, year)
-
-# Calculate median Sv profile 
-Sv_prof_median_year <- Sv_grid_laea %>%
-  left_join(., empty_DSL, by = c("year", "xc", "yc")) %>% # Add DSL presence
-  filter(empty_clean == F) %>%
-  mutate(IHO_area = factor(case_when(IHO_area == "East Arctic Ocean" ~ "East Arctic\nOcean",
-                                     IHO_area == "West Arctic Ocean" ~ "West Arctic\nOcean",
-                                     IHO_area == "Beaufort Sea" ~ "Beaufort Sea",
-                                     IHO_area == "The Northwestern Passages" ~ "Can. Arctic\nArchipelago",
-                                     IHO_area == "Baffin Bay" ~ "Baffin Bay",
-                                     IHO_area == "Davis Strait" ~ "Davis Strait"),
-                           levels = c("West Arctic\nOcean", "Beaufort Sea", "Can. Arctic\nArchipelago",
-                                      "Baffin Bay", "Davis Strait", "East Arctic\nOcean"))) %>%
-  mutate(depth_round = rounder(depth, -10)) %>% # round down to nearest 20
-  group_by(depth_round, IHO_area, year) %>%
-  summarise(sv_lin50 = median(sv_lin_median)) %>% 
-  ungroup() %>%
-  mutate(Sv_median = 10 * log10(sv_lin50),
-         year = as.character(year))
+# Calculate median Sv profiles per area
 Sv_prof_median <- Sv_grid_laea %>%
   left_join(., empty_DSL, by = c("year", "xc", "yc")) %>% # Add DSL presence
-  filter(empty_clean == F) %>%
-  mutate(IHO_area = factor(case_when(IHO_area == "East Arctic Ocean" ~ "East Arctic\nOcean",
+  filter(empty_clean == F) %>% # Filter for DSL
+  mutate(depth_round = rounder(depth, -10)) %>% # round down to nearest 20
+  group_by(depth_round, IHO_area) %>%
+  summarise(sv_lin50 = median(sv_lin_median),
+            sv_lin025 = quantile(sv_lin_median, 0.025),
+            sv_lin975 = quantile(sv_lin_median, 0.975)) %>% 
+  ungroup() %>%
+  mutate(Sv_median = 10 * log10(sv_lin50),
+         Sv_025 = 10 * log10(sv_lin025),
+         Sv_975 = 10 * log10(sv_lin975),
+         IHO_area = factor(case_when(IHO_area == "East Arctic Ocean" ~ "East Arctic\nOcean",
                                      IHO_area == "West Arctic Ocean" ~ "West Arctic\nOcean",
                                      IHO_area == "Beaufort Sea" ~ "Beaufort Sea",
                                      IHO_area == "The Northwestern Passages" ~ "Can. Arctic\nArchipelago",
                                      IHO_area == "Baffin Bay" ~ "Baffin Bay",
                                      IHO_area == "Davis Strait" ~ "Davis Strait"),
                            levels = c("West Arctic\nOcean", "Beaufort Sea", "Can. Arctic\nArchipelago",
-                                      "Baffin Bay", "Davis Strait", "East Arctic\nOcean"))) %>%
-  mutate(depth_round = rounder(depth, -10)) %>% # round down to nearest 20
-  group_by(depth_round, IHO_area) %>%
-  summarise(sv_lin50 = median(sv_lin_median)) %>% 
-  ungroup() %>%
-  mutate(Sv_median = 10 * log10(sv_lin50),
-         year = "Median") %>%
-  bind_rows(., Sv_prof_median_year) %>%
-  mutate(year = factor(year, levels = c("2015", "2016", "2017", "Median")))
-
+                                      "Baffin Bay", "Davis Strait", "East Arctic\nOcean")))
 # Calculate center of mass
 CM_prof <- Sv_prof_median %>%
   filter(depth_round >= 200) %>%
@@ -556,27 +516,27 @@ CM_prof <- Sv_prof_median %>%
 # Plot
 p_Sv_prof_lines <- Sv_prof_median %>%
   ggplot() +
-  # geom_line(data = Sv_prof, aes(x = depth_round, y = Sv_median, group = ID), col = "grey85", size = 0.5) +
-  # geom_vline(xintercept = 200, lty = 3) + # Mesopelagic zone
-  geom_line(aes(x = depth_round, y = Sv_median, col = year), size = 0.7) + # Sv profiles per year and median
+  geom_ribbon(aes(x = depth_round, ymin = Sv_025, ymax = Sv_975, fill = IHO_area), alpha = 0.3) + # 95 % of the Sv median
+  geom_line(aes(x = depth_round, y = Sv_median, col = IHO_area), size = 0.8) + # Median Sv profile
+  geom_vline(xintercept = 200, lty = 3) + # Mesopelagic zone
   geom_vline(data = CM_prof, aes(xintercept = CM), lty = 2) + # Center of mass
   geom_text(data = CM_prof, aes(x = CM -10, y = -70, label = as.character(CM_round)),
             vjust = 0, size = 3, fontface = "italic") + # Label center of mass
-  geom_rect(aes(xmin = 0, xmax = 200, ymin = -Inf, ymax = Inf), col = NA, fill = "grey90", alpha = 0.05) + # Mesopelagic zone
+  # geom_rect(aes(xmin = 0, xmax = 200, ymin = -Inf, ymax = Inf), col = NA, fill = "grey87", alpha = 0.05) + # Mesopelagic zone
   scale_x_reverse("Depth (m)", breaks = seq(0, 1000, 200)) + 
   scale_y_continuous(expression("S"[V]*" (dB re 1 m"^-1*")"), breaks = seq(-200, 0, 10)) +
-  scale_colour_manual(values = col_pal) +
+  scale_colour_manual(values = met.brewer("Hiroshige", n = 6, direction = -1)) +
+  scale_fill_manual(values = met.brewer("Hiroshige", n = 6, direction = -1)) +
   coord_flip(ylim = c(-105, -65), xlim = c(1000, 0), expand = F) +
-  facet_rep_grid(~ IHO_area) +
+  facet_grid(~ IHO_area) +
   theme(panel.border = element_blank(),
         axis.line = element_line(),
         legend.title = element_blank(), 
-        legend.position = "top",
-        panel.spacing = unit(0, "in"),
-        plot.margin = unit(c(0, 0.1, 0, 0), "in"))
-ggsave("plots/Fig2_Sv_profiles_lines.png", p_Sv_prof_lines, height = 3.5, width = 8, dpi = 600, units = "in")
+        legend.position = "none")
+ggsave("plots/Fig2_Sv_profiles_lines.png", p_Sv_prof_lines, device = agg_png, height = 3.5, width = 6.5, dpi = 600, units = "in")
 p_Sv_prof_lines
 ```
+
 
 ### Points
 
