--- a/PanArctic_DSL_figures.Rmd
+++ b/PanArctic_DSL_figures.Rmd
@@ -680,20 +680,22 @@ p_map_SA_DSL
 
 ```{r fig3-map-points}
 map_DSL <- SA_grid_laea %>%  # Map of DSL detections
-  mutate(DSL = factor(if_else(empty_clean == T, F, T), levels = c(T, F))) %>%
+  mutate(NASC_int_d = cut(NASC_int, c(0, 1, 10, 100, 1000, 10000, Inf))) %>%
+  mutate(DSL = factor(if_else(empty_clean == T, "Absent", "Present"), levels = c("Present", "Absent"))) %>%
   arrange(DSL) %>%
   ggplot(aes(x = xc,  y = yc)) +
   geom_raster(data = bathy_laea, aes(x = xc, y = yc, fill = depth_d)) + # bathy
   scale_fill_cmocean("Depth (m)", name = "deep", discrete = T, na.value = NA, alpha = 0.4) +
   geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") + # Coast
-  geom_point(aes(col = DSL), size = 0.6) +
-  scale_color_manual("DSL presence", values = c("#1170aa", "#fc7d0b")) +
+  geom_point(aes(col = NASC_int_d), size = 0.6) +
+  scale_color_viridis_d(option = "plasma", labels = c("< 1", "1-10", "11-100", "101-1000", "1001-10000", "> 10000")) +
   facet_wrap(~ year) +
   coord_fixed(xlim = c(-2450, 600), ylim = c(-1500, 1800), expand = F) +
   # coord_fixed(xlim = c(-2600, 1100), ylim = c(-1600, 1900), expand = F) +
   guides(fill = "none",
-         colour = guide_legend(override.aes = list(size = 2))) + # Increase symbol size in legend
+         colour = guide_legend(override.aes = list(size = 2), nrow = 1)) + # Increase symbol size in legend
   theme(legend.position = "top",
+        legend.title = element_blank(),
         axis.text = element_blank(),
         axis.ticks = element_blank(),
         axis.title = element_blank())
